# TorrentsDigger

./: .current_versions.txt  .current_versions.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  building.md  contribution_guide.md  justfile  pubspec.yaml
.github/workflows/: release_windows.yml
AppImage/: .gitignore
AppImage/AppDir/: AppRun  torrents-digger.desktop
android/: .gitignore
android/app/: build.gradle.kts
flatpak/: .gitignore  fake_rustup.sh  flatpak-flutter.yml  io.gitlab.ForTheCommunity.torrentsdigger.yml  io.gitlab.forthecommunity.torrents_digger.yml  io.gitlab.forthecommunity.torrentsdigger.yml  justfile  org.forthecommunity.torrents_digger.yml  org.forthecommunity.torrentsdigger.yml  torrents_digger.sh
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/configs/: build_context_extension.dart  colors.dart  (+2 more)
lib_torrent_digger/: Cargo.toml  justfile
lib_torrents_digger/: .gitignore  Cargo.toml  build.rs  justfile
lib_torrents_digger/src/: blocking_request.rs  lib.rs  static_includes.rs  sync_request.rs  testbin.rs  torrent.rs  trackers.rs
lib_torrents_digger/src/database/: bookmark.rs  bookmark_torrent.rs  custom_resolver.rs  database_config.rs  default_trackers.rs  fetch.rs  initialize.rs  initialize_database.rs  mod.rs  proxy.rs  settings_kvs.rs
lib_torrents_digger/src/database/migrations/01-initial/: up.sql
lib_torrents_digger/src/database/migrations/02-migration/: up.sql
lib_torrents_digger/src/database/migrations/03-add_key/: up.sql
lib_torrents_digger/src/database/migrations/04-book_cat/: up.sql
lib_torrents_digger/src/network_io/: custom_resolver.rs  mod.rs  sync_request.rs  trackers.rs
lib_torrents_digger/src/sources/: available_sources.rs  common.rs  knaben_database.rs  lime_torrents.rs  limetorrents.rs  mod.rs  nyaa.rs  nyaa_dot_si.rs  pirate_bay.rs  solid_torrents.rs  sukebei_nyaa.rs  sukebei_nyaa_dot_si.rs  the_pirate_bay.rs  torrents_csv.rs  torrents_csv_dot_com.rs  uindex.rs
lib_torrents_digger/src/sources/customs/: available_custom_sources.rs  custom.rs  mod.rs
lib_torrents_digger/src/sources/nyaa/: mod.rs  nyaa.rs  sukebei_nyaa.rs
lib_torrents_digger/src/sources/torrents_csv/: mod.rs  torrents_csv_dot_com.rs
libscraper/: Cargo.toml
libscraper/src/: blocking_request.rs  lib.rs  non_blocking_request.rs  testbin.rs  torrent.rs
libscraper/src/sources/: available_sources.rs  mod.rs  nyaa_dot_si.rs  torrents_csv_dot_com.rs
libscrapper/: Cargo.toml  justfile
linux/: CMakeLists.txt  io.gitlab.ForTheCommunity.torrentsdigger.desktop  io.gitlab.ForTheCommunity.torrentsdigger.metainfo.xml  io.gitlab.forthecommunity.torrents_digger.desktop  io.gitlab.forthecommunity.torrents_digger.metainfo.xml  io.gitlab.forthecommunity.torrentsdigger.metainfo.xml  org.forthecommunity.torrents_digger.desktop
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: app.rs  internals.rs  mod.rs  preludes.rs
rust/src/api/database/: bookmark.rs  get_settings_kv.rs  initialize.rs  mod.rs  proxy.rs
rust/src/api/sources/: nyaa.rs
rust_builder/: pubspec.yaml
tui/: Cargo.toml
web/: index.html  manifest.json
windows/: CMakeLists.txt  installer.iss
(+168 files in other folders)
