[package]
name = "lib_torrents_digger"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_bin"
path = "./src/testbin.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
once_cell = "1.21.3"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "3.1.2", features = ["rustls","socks-proxy"] }
urlencoding = "2.1.3"

[build-dependencies]
rand = "0.9.2"
ureq = { version = "3.1.2", features = ["rustls"] }
