[package]
name = "lib_torrents_digger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
include_dir = "0.7.4"
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
regex = "1.12.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = { version = "2.4.1", features = ["from-directory"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ua_generator = "0.5.47"
ureq = { version = "3.1.4", features = ["rustls","socks-proxy"] }
urlencoding = "2.1.3"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
