[package]
name = "lib_torrents_digger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
include_dir = "0.7.4"
once_cell = "1.21.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
regex = "1.12.3"
rsdns = { version = "0.23.0", features = ["net-std"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = { version = "2.5.0", features = ["from-directory"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ua_generator = "0.5.63"
ureq = { version = "3.3.0", features = ["rustls","socks-proxy"] }
urlencoding = "2.1.3"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
noyalib = "0.0.5"
