[package]
name = "rust_lib_torrents_digger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
html5ever = "0.35.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
