[package]
name = "rust_lib_torrents_digger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libscrapper = { path = "../libscraper" }
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.99"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
